--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "web/**/*",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build/web"
-      }
+      "src": "build/web/**",
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
